# ai_employee

./: .gitignore  ARCHITECTURE.md  README.md  main.py  pyproject.toml  test_gold.py  test_imports.py  test_platinum_imports.py  test_social_approval.py
mcp_servers/email_server/: index.js  package.json
mcp_servers/odoo_server/: index.js  package.json
scripts/: init_vault_sync.sh  ralph_loop.sh  setup_cron.sh  start_all.sh  start_platinum.sh  stop_all.sh  stop_platinum.sh
src/: audit_logger.py  brain.py  ceo_briefing.py  config.py  dashboard.py  linkedin_poster.py  odoo_client.py  ralph_wiggum.py  retry_handler.py  runner.py
src/platinum/: agent_identity.py  claim_manager.py  cloud_runner.py  demo.py  domain_router.py  local_runner.py  signal_bus.py  vault_structure.py  vault_sync.py  watchdog.py
src/social_media/: __init__.py  facebook_poster.py  instagram_poster.py  twitter_poster.py
src/watchers/: base_watcher.py  gmail_watcher.py  whatsapp_watcher.py
vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md
vault/Done/: APPROVE_payment_client_c.md  APPROVE_send_invoice.md  OUTPUT_blog_ai_2026.md  OUTPUT_blog_task.md  OUTPUT_cloud_summary.md  OUTPUT_log_test.md  OUTPUT_log_test_2.md  OUTPUT_payment_client_c.md  blog_task.md  cloud_summary.md  log_test_2.md  my_task.md  payment_client_c.md  send_invoice.md  test_task.md
vault/Logs/: 2026-02-24.json  2026-02-25.json  2026-02-25.md
vault/Plans/: PLAN_blog_ai_2026.md  PLAN_blog_task.md  PLAN_cloud_summary.md  PLAN_log_test.md  PLAN_log_test_2.md  PLAN_my_task.md  PLAN_payment_client_c.md  (+2 more)
