[project]
name = "ai-employ"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.4",
    "groq>=1.0.0",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.1",
]
